add JPA+REST API
